#2.19~21 pug 파일 수정, dummy db 넣기

--- a/test.html
+++ b/test.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="#" method="GET">
+        <select name="list" >
+            <option>아이디</option>
+            <option value="m_id">아이디2</option>
+        </select>
+        <input type="submit" value="submit">
+    </form>
     
 </body>
 </html>
